--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -17,6 +17,7 @@ html {
  */
 body {
   margin: 0;
+  background: #e1e1e1;
   /* 1 */
   font-size: 14px;
   /*font-family: "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif;*/
